@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2021, Huawei Technologies Co., Ltd. All rights reserved.
+ * Copyright (c) 2022, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -20,8 +20,16 @@
  * or visit www.oracle.com if you need additional information or have any
  * questions.
  */
-package org.openjdk.bench.java.security;
+package org.openjdk.bench.java.lang;
 
+import java.io.FilterOutputStream;
+import java.io.IOException;
+import java.io.OutputStream;
+import java.io.PrintStream;
+import java.io.PrintWriter;
+import java.io.StringWriter;
+import java.util.concurrent.TimeUnit;
+import java.util.stream.IntStream;
 import org.openjdk.jmh.annotations.Benchmark;
 import org.openjdk.jmh.annotations.BenchmarkMode;
 import org.openjdk.jmh.annotations.Fork;
@@ -33,38 +41,52 @@ import org.openjdk.jmh.annotations.Scope;
 import org.openjdk.jmh.annotations.Setup;
 import org.openjdk.jmh.annotations.State;
 import org.openjdk.jmh.annotations.Warmup;
-import sun.security.util.DisabledAlgorithmConstraints;
 
-import java.security.AlgorithmConstraints;
-import java.security.CryptoPrimitive;
-import java.util.concurrent.TimeUnit;
-import java.util.EnumSet;
-import java.util.Set;
-
-import static sun.security.util.DisabledAlgorithmConstraints.PROPERTY_TLS_DISABLED_ALGS;
-
+/**
+ * Benchmarks for java.lang.StackTraceElement
+ */
+@State(value = Scope.Benchmark)
 @BenchmarkMode(Mode.AverageTime)
 @OutputTimeUnit(TimeUnit.NANOSECONDS)
-@Fork(value = 3, jvmArgsAppend = {"--add-exports", "java.base/sun.security.util=ALL-UNNAMED"})
-@State(Scope.Thread)
 @Warmup(iterations = 5, time = 1)
 @Measurement(iterations = 5, time = 1)
-public class AlgorithmConstraintsPermits {
+@Fork(3)
+public class StackTraceElementBench {
 
-    AlgorithmConstraints tlsDisabledAlgConstraints;
-    Set<CryptoPrimitive> primitives = EnumSet.of(CryptoPrimitive.KEY_AGREEMENT);
-
-    @Param({"SSLv3", "DES", "NULL", "TLS1.3"})
-    String algorithm;
+    private StackTraceElement element;
+    private Throwable throwable;
 
     @Setup
     public void setup() {
-        tlsDisabledAlgConstraints = new DisabledAlgorithmConstraints(PROPERTY_TLS_DISABLED_ALGS);
+        StackTraceElement[] elements = IntStream.range(0, 500)
+                .mapToObj(i -> new StackTraceElement(
+                        "classloader" + i,
+                        "module" + i,
+                        "version" + i,
+                        "class" + i,
+                        "method" + i,
+                        "file" + i + ".java",
+                        i))
+                .toArray(StackTraceElement[]::new);
+        this.element = elements[0];
+        this.throwable = new RuntimeException("benchmark") {
+            @Override
+            public synchronized Throwable fillInStackTrace() {
+                setStackTrace(elements);
+                return this;
+            }
+        };
     }
 
     @Benchmark
-    public boolean permits() {
-        return tlsDisabledAlgConstraints.permits(primitives, algorithm, null);
+    public String toString() {
+        return element.toString();
+    }
+
+    @Benchmark
+    public String printStackTrace() {
+        StringWriter sw = new StringWriter();
+        throwable.printStackTrace(new PrintWriter(sw));
+        return sw.toString();
     }
 }
-
